# fair-data-fund

./: MANIFEST.in  Makefile.am  configure.ac  pyproject.toml.in
src/: Makefile  Makefile.am  Makefile.in
src/fair_data_fund/: database.py  email_handler.py  formatter.py  rdf.py  ui.py  validator.py  wsgi.py
src/fair_data_fund/resources/html_templates/: 404.html  application-form-submitted.html  application-form.html  application-overview.html  home.html  layout.html  ranking.html
src/fair_data_fund/resources/html_templates/review/: dashboard.html  evaluate.html
src/fair_data_fund/resources/sparql_templates/: account_by_email.sparql  account_by_session_token.sparql  accounts.sparql  applications.sparql  institutions.sparql  prefixes.sparql  ranking.sparql  update_application.sparql  update_application_budget_upload.sparql
src/fair_data_fund/resources/static/: Budget_Template_FAIR_Data_Fund_2024.xlsx
src/fair_data_fund/resources/static/css/: form.css  main.css
src/fair_data_fund/resources/static/js/: application-form.js  evaluate-form.js  utils.js
