AUTOMAKE_OPTIONS        = subdir-objects

PYTHON_FILES =                                                          \
    fair_data_fund/__init__.py                                          \
    fair_data_fund/ui.py                                                \
    fair_data_fund/cache.py                                             \
    fair_data_fund/convenience.py                                       \
    fair_data_fund/database.py                                          \
    fair_data_fund/email_handler.py                                     \
    fair_data_fund/formatter.py                                         \
    fair_data_fund/rdf.py                                               \
    fair_data_fund/wsgi.py

EXTRA_RESOURCES =                                                       \
    fair_data_fund/resources/html_templates/400.html                    \
    fair_data_fund/resources/html_templates/403.html                    \
    fair_data_fund/resources/html_templates/404.html                    \
    fair_data_fund/resources/html_templates/410.html                    \
    fair_data_fund/resources/html_templates/application-form.html       \
    fair_data_fund/resources/html_templates/application-form-submitted.html \
    fair_data_fund/resources/html_templates/home.html                   \
    fair_data_fund/resources/html_templates/layout.html                 \
    fair_data_fund/resources/robots.txt                                 \
    fair_data_fund/resources/sparql_templates/applications.sparql       \
    fair_data_fund/resources/sparql_templates/institutions.sparql       \
    fair_data_fund/resources/sparql_templates/prefixes.sparql           \
    fair_data_fund/resources/sparql_templates/update_application.sparql \
    fair_data_fund/resources/sparql_templates/update_application_budget_upload.sparql \
    fair_data_fund/resources/static/Budget_Template_FAIR_Data_Fund_2024.xlsx \
    fair_data_fund/resources/static/fonts/fa-solid-900.eot              \
    fair_data_fund/resources/static/fonts/fa-solid-900.ttf              \
    fair_data_fund/resources/static/fonts/fa-solid-900.woff             \
    fair_data_fund/resources/static/fonts/fa-solid-900.woff2            \
    fair_data_fund/resources/static/fonts/FiraMono-Regular.ttf          \
    fair_data_fund/resources/static/fonts/SourceSansPro-Bold.ttf        \
    fair_data_fund/resources/static/fonts/SourceSansPro-Italic.ttf      \
    fair_data_fund/resources/static/fonts/SourceSansPro-Regular.ttf     \
    fair_data_fund/resources/static/images/loader.svg                   \
    fair_data_fund/resources/static/images/logo-4tu.svg                 \
    fair_data_fund/resources/static/js/edit-dataset.js                  \
    fair_data_fund/resources/static/js/jquery-3.7.1.min.js

EXTRA_DIST = $(PYTHON_FILES) $(EXTRA_RESOURCES)
